<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        tools:context=".ui.home.HomeFragment"
        tools:layout_editor_absoluteY="-46dp"
        tools:layout_editor_absoluteX="-47dp">

    <Spinner
            android:id="@+id/spinEnv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="131dp"
            android:layout_marginBottom="25dp"
            android:minHeight="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etBswrDvsnCode"
            app:layout_constraintBottom_toTopOf="@+id/etBswrDvsnCode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etBswrDvsnCode" />

    <EditText
            android:id="@+id/etBswrDvsnCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="RIV"
            android:hint="@string/label_bswr_dvsn_code"
            app:layout_constraintTop_toBottomOf="@+id/spinEnv"
            android:layout_marginBottom="25dp"
            app:layout_constraintEnd_toEndOf="@+id/etRivsCustIdnrId"
            app:layout_constraintBottom_toTopOf="@+id/etRivsCustIdnrId"
            app:layout_constraintStart_toStartOf="@+id/etRivsCustIdnrId" />

    <EditText
            android:id="@+id/etRivsCustIdnrId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="1022573"
            android:hint="@string/label_rivs_cust_id"
            app:layout_constraintTop_toBottomOf="@+id/etBswrDvsnCode"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="@+id/etRivsApiMthoId"
            app:layout_constraintBottom_toTopOf="@+id/etRivsApiMthoId"
            app:layout_constraintStart_toStartOf="@+id/etRivsApiMthoId" />

    <EditText
            android:id="@+id/etRivsApiMthoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="WEBVIEW"
            android:hint="@string/label_api_method"
            app:layout_constraintTop_toBottomOf="@+id/etRivsCustIdnrId"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="@+id/etRqstDeptCode"
            app:layout_constraintBottom_toTopOf="@+id/etRqstDeptCode"
            app:layout_constraintStart_toStartOf="@+id/etRqstDeptCode" />

    <EditText
            android:id="@+id/etRqstDeptCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="TEST"
            android:hint="@string/label_dept_code"
            app:layout_constraintTop_toBottomOf="@+id/etRivsApiMthoId"
            android:layout_marginBottom="26dp"
            app:layout_constraintEnd_toEndOf="@+id/etKeyInCount"
            app:layout_constraintBottom_toTopOf="@+id/etKeyInCount"
            app:layout_constraintStart_toStartOf="@+id/etKeyInCount" />

    <EditText
            android:id="@+id/etKeyInCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="3"
            android:hint="@string/label_key_in_count"
            app:layout_constraintTop_toBottomOf="@+id/etRqstDeptCode"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/callRivBtn"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/callRivBtn"
            android:text="한화 비대면인증 호출"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            app:layout_constraintTop_toBottomOf="@+id/etKeyInCount"
            android:layout_marginBottom="134dp"
            app:layout_constraintEnd_toEndOf="@+id/etKeyInCount"
            app:layout_constraintStart_toStartOf="@+id/etKeyInCount"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>