<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="RIV"
            android:hint="@string/label_bswr_dvsn_code"
            android:ems="10"
            android:id="@+id/etBswrDvsnCode"
            android:layout_marginTop="193dp"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/etRivsCustIdnrId"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etRivsCustIdnrId"
            app:layout_constraintEnd_toEndOf="@+id/etRivsCustIdnrId" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="text"
            android:id="@+id/etRivsCustIdnrId"
            android:text="1022573"
            android:hint="@string/label_rivs_cust_id"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/etBswrDvsnCode"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/etRivsApiMthoId"
            app:layout_constraintStart_toStartOf="@+id/etRivsApiMthoId"
            app:layout_constraintEnd_toEndOf="@+id/etRivsApiMthoId" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="text"
            android:id="@+id/etRivsApiMthoId"
            android:text="WEBVIEW"
            android:hint="@string/label_api_method"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/callRivBtn"
            android:layout_marginStart="3dp"
            app:layout_constraintTop_toBottomOf="@+id/etRivsCustIdnrId"
            android:layout_marginBottom="38dp"
            app:layout_constraintBottom_toTopOf="@+id/callRivBtn"
            app:layout_constraintEnd_toEndOf="@+id/callRivBtn" />

    <Button
            android:id="@+id/callRivBtn"
            android:text="한화 비대면인증 호출"
            android:layout_width="211dp"
            android:layout_height="48dp"
            android:backgroundTint="#03A9F4"
            app:layout_constraintTop_toBottomOf="@+id/etRivsApiMthoId"
            android:layout_marginBottom="243dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>